--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "framer-motion": "^10.16.4",
     "mdi-react": "^9.2.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
@@ -24,6 +25,8 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "prisma": "^5.3.1"
   }
 }
