--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "straighta",
   "version": "0.1.0",
+  "author": "Nur Ihsan Al Ghifari <nurihsan.idn@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
