feat: implement basic api for login and register

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 # A postgres database
 PRISMA_DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# JWT secret key
+RAHASIA_JWT_BROW="abdc"
