--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
+    "jose": "^4.14.6",
     "mdi-react": "^9.2.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
@@ -28,6 +30,9 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
+    "jest": "^29.7.0",
+    "node-mocks-http": "^1.13.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "prisma": "^5.3.1"
