--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
@@ -30,8 +31,12 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@types/bcryptjs": "^2.4.4",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "node-mocks-http": "^1.13.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
