--- a/package.json
+++ b/package.json
@@ -34,10 +34,9 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/bcryptjs": "^2.4.4",
-    "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "node-mocks-http": "^1.13.0",
+    "next-test-api-route-handler": "^3.1.8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "prisma": "^5.3.1"
