--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/bcryptjs": "^2.4.4",
