--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "postinstall": "prisma db push"
+    "postinstall": "prisma db push",
+    "db:seed": "ts-node prisma/seed.ts",
+    "db:push": "prisma db push"
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
@@ -43,6 +45,7 @@
     "next-test-api-route-handler": "^3.1.8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "prisma": "^5.3.1"
+    "prisma": "^5.3.1",
+    "ts-node": "^10.9.1"
   }
 }
