--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest",
     "postinstall": "prisma db push",
     "db:seed": "ts-node prisma/seed.ts",
+    "db:nuke": "ts-node prisma/nuke.ts",
     "db:push": "prisma db push",
     "db:studio": "prisma studio"
   },
